# pong-ai

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  default.nix  flake.nix  shell.nix
src/frontend/: main.cpp  state.cpp  util.cpp
src/include/frontend/: constants.h  font_data.h  state.h  util.h
src/include/utec/algebra/: Tensor.h  tensor.h  vec2.h
src/include/utec/nn/: activation.h  dense.h  layer.h  loss.h  neural_network.h
tests/: CMakeLists.txt  test_neural_network.cpp  test_tensor.cpp
